--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "typeorm": "^0.3.20",
     "undefined": "^0.1.0",
     "uuid": "^10.0.0",
-    "winston": "^3.13.1"
+    "winston": "^3.13.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.2",
