--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validators": "^1.0.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.12",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "joi": "^17.13.3",
