--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "nest": "^0.1.6",
+    "nestjs-telegraf": "^2.8.1",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -54,6 +55,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
+    "telegraf": "^4.16.3",
     "typeorm": "^0.3.20",
     "undefined": "^0.1.0",
     "uuid": "^10.0.0",
