--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nest": "^0.1.6",
     "nestjs-telegraf": "^2.8.1",
     "nestjs-typeorm-paginate": "^4.0.4",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
