--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3'
 services:
   db:
     image: postgres
-    container_name: tbot
+    container_name: db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: sampledb
     ports:
-      - '5432:5432'
+      - '5433:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
   pgadmintweb:
@@ -18,19 +18,19 @@ services:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
     ports:
-      - '5050:80'
+      - '5051:80'
     depends_on:
       - db
-  # app:
-  #   build:
-  #     context: ./
-  #     dockerfile: Dockerfile
-  #     target: development
-  #   ports:
-  #     - '3000:3000'
-  #   volumes:
-  #     - ./:/app
-  #   depends_on:
-  #     - db
+  app:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+      target: development
+    ports:
+      - '5000:5000'
+    volumes:
+      - ./:/app
+    depends_on:
+      - db
 volumes:
   postgres_data:
